--- a/src/pages/errorInternalServer-page/errorInternalServer-page.hbs
+++ b/src/pages/errorInternalServer-page/errorInternalServer-page.hbs
@@ -6,7 +6,7 @@
 
     </div>
     <div class="errorInternalServer-page__footer">
-        {{> Button text="Вернуться на стартовую страничку" page="start" }}
+        {{> Link page="start" text="Вернуться на стартовую страничку"}}
 
     </div>
   </form>
