--- a/src/pages/login-page/login-page.hbs
+++ b/src/pages/login-page/login-page.hbs
@@ -8,7 +8,8 @@
     <div class="login-page__footer">
       {{> Button text="Авторизоваться" page="chat" }}
       {{> Button text="Нет аккаунта?" page="registration" }}
-      {{> Button text="Вернуться на стартовую страничку" page="start" }}
+        {{> Link page="start" text="Вернуться на стартовую страничку"}}
+
     </div>
   </form>
 {{/ Dialog }}
