--- a/src/pages/start-page/start-page.hbs
+++ b/src/pages/start-page/start-page.hbs
@@ -7,6 +7,7 @@
       {{> Button text="Логин" page="login" }}
       {{> Button text="Регистрация" page="registration" }}
       {{> Button text="Чаты" page="chat" }}
+      {{> Button text="Посмотреть страничку пользователя" page="changeData" }}
       {{> Button text="Посмотреть ошибку 404" page="errorNotFound" }}
       {{> Button text="Посмотреть ошибку 500" page="errorInternalServer" }}
     </div>
