--- a/src/pages/changeData-page/changeData-page.scss
+++ b/src/pages/changeData-page/changeData-page.scss
@@ -1,6 +1,6 @@
-.start-page {
+.changeData-page {
   width: 280px;
-  height: 430px;
+  height: 550px;
   display: flex;
   flex-direction: column;
 
