--- a/src/pages/chat-page/chat-page.hbs
+++ b/src/pages/chat-page/chat-page.hbs
@@ -1,8 +1,35 @@
 <div class="chat-page">
-  {{#> ChatList className="chat-page__list" }}
-    {{#each (chat-page-list)}}
-      {{> ChatItem }}
-    {{/each}}
-  {{/ ChatList }}
-  {{> Link page="LoginPage" text="Назад к логину"}}
+    <div class="chat-page__sidebar">
+        <img src="../assets/Птица-секретарь.png" alt="Профиль" class="chat-page__profile-icon" />
+        <span class="chat-page__username">Динка</span>
+        {{> Link page="start" text="Профиль"}}
+        <input type="text" placeholder="Поиск по сообщениям..." class="chat-page__search-input" />
+        {{#> ChatList className="chat-page__list" }}
+            {{#each (chat-page-list)}}
+                {{> ChatItem }}
+            {{/each}}
+        {{/ ChatList }}
+    </div>
+    <div class="chat-page__dialog">
+        <div class="chat-page__header">
+            <img src="../assets/Мандаринка.png" alt="Профиль" class="chat-page__profile-icon" />
+            <span class="chat-page__username">Мандаринка</span>
+        </div>
+        <div class="chat-page__messages">
+            <div class="message">
+                <span class="message__text">Факт: одно занятие в день очищает совесть и улучшает сон</span>
+            </div>
+            <div class="message">
+                <span class="message__text">Используйте функцию «Краткий пересказ», чтобы сохранить ёмкую версию пройденного урока. А если захотите написать заметку, это можно сделать прямо в учебнике.</span>
+            </div>
+            <div class="message">
+                <span class="message__text">Ты есть в Телеграмм, а я в Красной Книге</span>
+            </div>
+        </div>
+        <div class="chat-page__input">
+            <input type="text" placeholder="Напишите сообщение..." class="chat-page__input-field" />
+            <button class="chat-page__send-button">Отправить сообщение</button>
+        </div>
+        {{> Link page="start" text="Назад к стартовой страничке"}}
+    </div>
 </div>
