Update profile and password

--- a/src/pages/start-page/start-page.hbs
+++ b/src/pages/start-page/start-page.hbs
@@ -4,10 +4,12 @@
       {{> PageTitle title="Актуальные странички" }}
     </div>
     <div class="start-page__footer">
-      {{> Button text="Логин" page="login" }}
+      {{> Button text="Авторизация" page="login" }}
       {{> Button text="Регистрация" page="registration" }}
       {{> Button text="Чаты" page="chat" }}
-      {{> Button text="Посмотреть страничку пользователя" page="changeData" }}
+      {{> Button text="Посмотреть страничку пользователя" page="user" }}
+      {{> Button text="Изменить страничку пользователя" page="changeData" }}
+      {{> Button text="Изменить пароль пользователя" page="changePassword" }}
       {{> Button text="Посмотреть ошибку 404" page="errorNotFound" }}
       {{> Button text="Посмотреть ошибку 500" page="errorInternalServer" }}
     </div>
