--- a/src/pages/login-page/login-page.hbs
+++ b/src/pages/login-page/login-page.hbs
@@ -7,7 +7,7 @@
     </div>
     <div class="login-page__footer">
       {{> Button text="Авторизоваться" page="chat" }}
-      {{> Button text="Нет аккаунта?" page="registration" }}
+        {{> Link page="registration" text="Нет аккаунта?"}}
         {{> Link page="start" text="Вернуться на стартовую страничку"}}
 
     </div>
