Corrections before project delivery-2

--- a/src/pages/changePassword-page/changePassword-page.hbs
+++ b/src/pages/changePassword-page/changePassword-page.hbs
@@ -1,20 +1,21 @@
 {{#> Dialog }}
-    <form class="changePassword-page">
-        <div class="changePassword-page__avatar-container">
-            <img src="../assets/Птица-секретарь.png" alt="Профиль" class="chat-page__profile-icon" />
-        </div>
-        <div class="changePassword-page__nickname">
-            <span class="chat-page__username">Динка</span>
-        </div>
-        <div class="changePassword-page__content">
-            {{> InputField className="changePassword-page__input" title="Старый пароль" name="password" value="1234" type="password"}}
-            {{> InputField className="changePassword-page__input" title="Новый пароль" name="password" value="123456" type="password"}}
-            {{> InputField className="changePassword-page__input" title="Повторите новый пароль" name="password" value="123456" type="password"}}
-
-        </div>
-        <div class="changePassword-page__footer">
-            {{> Button text="Сохранить" page="chat" }}
-            {{> Link page="chat" text="Отменить"}}
-        </div>
-    </form>
+    <main>
+        <form class="changePassword-page">
+            <div class="changePassword-page__avatar-container">
+                <img src="../assets/Птица-секретарь.png" alt="Профиль" class="chat-page__profile-icon"/>
+            </div>
+            <div class="changePassword-page__nickname">
+                <span class="chat-page__username">Динка</span>
+            </div>
+            <div class="changePassword-page__content">
+                {{> InputField className="changePassword-page__input" title="Старый пароль" name="password" value="1234" type="password"}}
+                {{> InputField className="changePassword-page__input" title="Новый пароль" name="password" value="123456" type="password"}}
+                {{> InputField className="changePassword-page__input" title="Повторите новый пароль" name="password" value="123456" type="password"}}
+            </div>
+            <nav class="changePassword-page__footer">
+                {{> Button text="Сохранить" page="chat" }}
+                {{> Link page="chat" text="Отменить"}}
+            </nav>
+        </form>
+    </main>
 {{/ Dialog }}
