--- a/src/pages/chat-page/chat-page.hbs
+++ b/src/pages/chat-page/chat-page.hbs
@@ -1,20 +1,22 @@
-<div class="chat-page">
-    <div class="chat-page__sidebar">
-        <img src="../assets/Птица-секретарь.png" alt="Профиль" class="chat-page__profile-icon" />
+<main class="chat-page">
+    <nav class="chat-page__sidebar">
+        <img src="../assets/Птица-секретарь.png" alt="Профиль" class="chat-page__profile-icon"/>
         <span class="chat-page__username">Динка</span>
         {{> Link page="start" text="Профиль"}}
-        <input type="text" placeholder="Поиск по сообщениям..." class="chat-page__search-input" />
+        <form>
+            <input type="text" placeholder="Поиск по сообщениям..." class="chat-page__search-input"/>
+        </form>
         {{#> ChatList className="chat-page__list" }}
             {{#each (chat-page-list)}}
                 {{> ChatItem }}
             {{/each}}
         {{/ ChatList }}
-    </div>
-    <div class="chat-page__dialog">
-        <div class="chat-page__header">
-            <img src="../assets/Мандаринка.png" alt="Профиль" class="chat-page__profile-icon" />
+    </nav>
+    <section class="chat-page__dialog">
+        <header class="chat-page__header">
+            <img src="../assets/Мандаринка.png" alt="Профиль" class="chat-page__profile-icon"/>
             <span class="chat-page__username">Мандаринка</span>
-        </div>
+        </header>
         <div class="chat-page__messages">
             <div class="message">
                 <span class="message__text">Факт: одно занятие в день очищает совесть и улучшает сон</span>
@@ -26,10 +28,10 @@
                 <span class="message__text">Ты есть в Телеграмм, а я в Красной Книге</span>
             </div>
         </div>
-        <div class="chat-page__input">
-            <input type="text" placeholder="Напишите сообщение..." class="chat-page__input-field" />
+        <form class="chat-page__input">
+            <input type="text" placeholder="Напишите сообщение..." class="chat-page__input-field"/>
             <button class="chat-page__send-button">Отправить сообщение</button>
-        </div>
+        </form>
         {{> Link page="start" text="Назад к стартовой страничке"}}
-    </div>
-</div>
+    </section>
+</main>
