--- a/src/pages/errorInternalServer-page/errorInternalServer-page.hbs
+++ b/src/pages/errorInternalServer-page/errorInternalServer-page.hbs
@@ -1,13 +1,13 @@
 {{#> Dialog }}
-  <form class="errorInternalServer-page">
-    <div class="errorInternalServer-page__content">
-      {{> PageTitle title="500" }}
-      {{> PageTitle title="Мы уже фиксим" }}
-
-    </div>
-    <div class="errorInternalServer-page__footer">
-        {{> Link page="start" text="Вернуться на стартовую страничку"}}
-
-    </div>
-  </form>
+    <main>
+        <form class="errorInternalServer-page">
+            <div class="errorInternalServer-page__content">
+                {{> PageTitle title="500" }}
+                {{> PageTitle title="Мы уже фиксим" }}
+            </div>
+            <nav class="errorInternalServer-page__footer">
+                {{> Link page="start" text="Вернуться на стартовую страничку"}}
+            </nav>
+        </form>
+    </main>
 {{/ Dialog }}
