--- a/src/pages/changePassword-page/changePassword-page.hbs
+++ b/src/pages/changePassword-page/changePassword-page.hbs
@@ -1,18 +1,18 @@
 {{#> Dialog }}
     <main>
-        <form class="changePassword-page">
-            <div class="changePassword-page__avatar-container">
+        <form class="changeAll-page">
+            <div class="changeAll-page__avatar-container">
                 <img src="../assets/Птица-секретарь.png" alt="Профиль" class="chat-page__profile-icon"/>
             </div>
-            <div class="changePassword-page__nickname">
+            <div class="changeAll-page__nickname">
                 <span class="chat-page__username">Динка</span>
             </div>
-            <div class="changePassword-page__content">
-                {{> InputField className="changePassword-page__input" title="Старый пароль" name="password" value="1234" type="password"}}
-                {{> InputField className="changePassword-page__input" title="Новый пароль" name="password" value="123456" type="password"}}
-                {{> InputField className="changePassword-page__input" title="Повторите новый пароль" name="password" value="123456" type="password"}}
+            <div class="changeAll-page__content">
+                {{> InputField className="changeAll-page__input" title="Старый пароль" name="password" value="1234" type="password"}}
+                {{> InputField className="changeAll-page__input" title="Новый пароль" name="password" value="123456" type="password"}}
+                {{> InputField className="changeAll-page__input" title="Повторите новый пароль" name="password" value="123456" type="password"}}
             </div>
-            <nav class="changePassword-page__footer">
+            <nav class="changeAll-page__footer">
                 {{> Button text="Сохранить" page="chat" }}
                 {{> Link page="chat" text="Отменить"}}
             </nav>
