Fixing bugs in the code

--- a/src/pages/changePassword-page/changePassword-page.hbs
+++ b/src/pages/changePassword-page/changePassword-page.hbs
@@ -7,9 +7,9 @@
             <span class="chat-page__username">Динка</span>
         </div>
         <div class="changeAll-page__content">
-            {{> InputField className="changeAll-page__input" title="Старый пароль" name="password" value="1234" type="password"}}
-            {{> InputField className="changeAll-page__input" title="Новый пароль" name="password" value="123456" type="password"}}
-            {{> InputField className="changeAll-page__input" title="Повторите новый пароль" name="password" value="123456" type="password"}}
+            {{> InputField className="changeAll-page__input" title="Старый пароль" name="oldPassword" value="1234" type="password"}}
+            {{> InputField className="changeAll-page__input" title="Новый пароль" name="newPassword" value="123456" type="password"}}
+            {{> InputField className="changeAll-page__input" title="Повторите новый пароль" name="newPassword" value="123456" type="password"}}
         </div>
         <nav class="changeAll-page__footer">
             {{> Button text="Сохранить" page="chat" }}
