--- a/src/pages/chat-page/chat-page.hbs
+++ b/src/pages/chat-page/chat-page.hbs
@@ -29,7 +29,7 @@
             </div>
         </div>
         <form class="chat-page__input">
-            <input type="text" placeholder="Напишите сообщение..." class="chat-page__input-field"/>
+            <input type="text" name="message" placeholder="Напишите сообщение..." class="chat-page__input-field"/>
             <button class="chat-page__send-button">Отправить сообщение</button>
         </form>
         {{> Link page="start" text="Назад к стартовой страничке"}}
