--- a/src/pages/registration-page/registration-page.hbs
+++ b/src/pages/registration-page/registration-page.hbs
@@ -4,8 +4,8 @@
             {{> PageTitle title="Регистрация" }}
             {{> InputField className="registration-page__input" title="Почта" name="email" }}
             {{> InputField className="registration-page__input" title="Логин" name="login" }}
-            {{> InputField className="registration-page__input" title="Имя" name="name"}}
-            {{> InputField className="registration-page__input" title="Фамилия" name="surname" }}
+            {{> InputField className="registration-page__input" title="Имя" name="first_name"}}
+            {{> InputField className="registration-page__input" title="Фамилия" name="second_name" }}
             {{> InputField className="registration-page__input" title="Телефон" name="phone" }}
             {{> InputField className="registration-page__input" title="Пароль" name="password" type="password" }}
             {{> InputField className="registration-page__input" title="Пароль (еще раз)" name="password" type="password" }}
