--- a/src/pages/user-page/user-page.hbs
+++ b/src/pages/user-page/user-page.hbs
@@ -9,9 +9,9 @@
         <div class="changeAll-page__content">
             {{> InputField className="changeAll-page__input" title="Почта" name="email" value="example@example.com" }}
             {{> InputField className="changeAll-page__input" title="Логин" name="login" value="example_login" }}
-            {{> InputField className="changeAll-page__input" title="Имя" name="name" value="Дина" }}
-            {{> InputField className="changeAll-page__input" title="Фамилия" name="surname" value="Пупина" }}
-            {{> InputField className="changeAll-page__input" title="Имя в чате" name="name in chat" value="Динка" }}
+            {{> InputField className="changeAll-page__input" title="Имя" name="first_name" value="Дина" }}
+            {{> InputField className="changeAll-page__input" title="Фамилия" name="second_name" value="Пупина" }}
+            {{> InputField className="changeAll-page__input" title="Имя в чате" name="display_name" value="Динка" }}
             {{> InputField className="changeAll-page__input" title="Телефон" name="phone" value="8-925-111-11-11" }}
         </div>
         <nav class="changeAll-page__footer">
