--- a/src/pages/start-page/start-page.hbs
+++ b/src/pages/start-page/start-page.hbs
@@ -3,15 +3,15 @@
         <div class="start-page__content">
             {{> PageTitle title="Актуальные странички" }}
         </div>
-        <nav class="start-page__footer">
-            {{> Button text="Авторизация" page="login" }}
-            {{> Button text="Регистрация" page="registration" }}
-            {{> Button text="Чаты" page="chat" }}
-            {{> Button text="Посмотреть страничку пользователя" page="user" }}
-            {{> Button text="Изменить страничку пользователя" page="changeData" }}
-            {{> Button text="Изменить пароль пользователя" page="changePassword" }}
-            {{> Button text="Посмотреть ошибку 404" page="errorNotFound" }}
-            {{> Button text="Посмотреть ошибку 500" page="errorInternalServer" }}
-        </nav>
+          <div class="">
+            {{>Link caption="Авторизация"  type='success' page="login" }}
+            {{>Link caption="Регистрация"  type='success' page="registration" }}
+            {{>Link caption="Посмотреть страничку пользователя"  type='success' page="user" }}
+            {{>Link caption="Изменить страничку пользователя"  type='success' page="changeData" }}
+            {{>Link caption="Изменить пароль пользователя"  type='success' page="changePassword" }}
+            {{>Link caption="Чаты"  type='success' page="chat" }}
+            {{>Link caption="Посмотреть ошибку 404"  type='success' page="errorNotFound" }}
+            {{>Link caption="Посмотреть ошибку 500"  type='success' page="errorInternalServer" }}
+          </div>
     </form>
 </main>
