--- a/src/pages/chat-page/chat-page.scss
+++ b/src/pages/chat-page/chat-page.scss
@@ -5,9 +5,24 @@ html, body {
 }
 
 .chat-page {
-  display: flex;
-  height: 100%;
-  width: 100%;
+  width: 100vw;
+  height: 100vh;
+  display: grid;
+  grid-template: "chat-page__left chat-page__main" 1fr / auto 1fr;
+  gap: 0 0;
+  grid-auto-flow: row;
+  overflow-y: hidden;
+  overflow-x: hidden;
+}
+
+.chat-page__left {
+  grid-area: chat-page__left;
+  max-width: 350px;
+}
+
+.chat-page__main {
+  grid-area: chat-page__main;
+}
 
   &__sidebar {
     width: 30%;
@@ -122,4 +137,4 @@ html, body {
       word-wrap: break-word;
     }
   }
-}
+
