--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -1,14 +1,73 @@
-@import '../../assets/variables';
-
 .button {
-  height: 40px;
-  width: 100%;
-  text-align: center;
-  border-radius: 8px;
-  background-color: $button-bgcolor;
-  color: $button-color;
-  border: 0;
-  cursor: pointer;
-  margin: 5px;
+    background: var(--blue);
+    color: var(--white);
+    font-weight: bold;
+    font-size: 14px;
+    text-transform: uppercase;
+    border: none;
+    border-radius: 20px;
+    padding: 10px 20px;
+    cursor: pointer;
+    max-width: 280px;
+    height: 38px;
+    width: 100%;
 
+    &:hover {
+        opacity: 0.8;
+    }
 }
+
+.button-arrow {
+    padding: 0;
+    background-image: url("../../assets/icons/send.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 60%;
+    width: 36px;
+    height: 36px;
+}
+
+.button-dots {
+    padding: 0;
+    background-image: url("../../assets/icons/dots.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 60%;
+    background-color: transparent;
+    width: 36px;
+    height: 36px;
+}
+
+.button-paperclip {
+    padding: 0;
+    background-image: url("src/assets/icons/paper.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 60%;
+    background-color: transparent;
+    width: 50px;
+    height: 50px;
+}
+
+.button-cancel {
+    padding: 0;
+    background-image: url("../../assets/icons/arrow-left.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 60%;
+    width: 36px;
+    height: 36px;
+}
+
+.button-number {
+    padding: 10px;
+    max-width: 36px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 25px;
+    height: 25px;
+}
+
+
+
