--- a/src/components/chat-item/chat-item.scss
+++ b/src/components/chat-item/chat-item.scss
@@ -1,77 +1,49 @@
-@import '../../assets/variables';
-
 .chat-item {
-  &__line {
-    height: 1px;
-    background: $divider-line-color;
-    margin: 2px 0;
-    padding: 0 10px;
-  }
-
-  &__block {
-    height: 70px;
-    width: 100%;
     display: grid;
     grid-template:
-      "a n n" 13px
-      "a m u" 1fr
-      / 47px 1fr 50px;
+            "a b" 20px
+            "a c" 1fr / 47px 1fr;
+    gap: 4px 10px;
+    grid-auto-flow: column;
+    border-bottom: 1px solid var(--gray-light);
+    height: 80px;
+    width: 310px;
+    margin: 10px 0;
 
-    gap: 0 10px;
-    padding: 12px 10px;
-    box-sizing: border-box;
-    cursor: pointer;
-
-    &--current {
-      background: $chat-list-current-bgcolor;
-      cursor: default;
-    }
-  }
-
-  &__avatar {
-    grid-area: a;
-    background: $gray-light-color;
-    height: 47px;
-    width: 47px;
-    border-radius: 50%;
-  }
-
-  &__name {
-    grid-area: n;
-    font-weight: $font-weight-semibold;
-  }
-
-  &__date {
-    float: right;
-    font: $font-nano;
-  }
-
-  &__message {
-    grid-area: m;
-  }
-
-  &__message-text {
-    font: $font-small;
-    margin-top: 4px;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
-
-  &__unread {
-    grid-area: u;
-    margin-top: 14px;
-    height: 20px;
-    width: 20px;
-    font: $font-micro;
-    background: $button-bgcolor;
-    color: $button-color;
-    place-self: end;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
 }
+
+.chat-item__avatar {
+    grid-area: a;
+    display: flex;
+    align-items: center;
+}
+
+.chat-item__caption {
+    grid-area: b;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+
+    .chat-item__caption__name {
+        font-weight: bold;
+    }
+}
+
+.chat-item__message {
+    grid-area: c;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+
+    .chat-item__message__content p {
+        color: var(--gray-light);
+        width: 200px;
+        margin: 0;
+        -webkit-line-clamp: 2;
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+}
+
