--- a/src/pages/changePassword/changePassword.hbs
+++ b/src/pages/changePassword/changePassword.hbs
@@ -1,17 +1,17 @@
 <main>
-    <form class="changeAll-page">
-        <div class="changeAll-page__avatar-container">
+    <form class="change_all-page">
+        <div class="change_all-page__avatar-container">
             <img src="../assets/Птица-секретарь.png" alt="Профиль" class="chat-page__profile-icon"/>
         </div>
-        <div class="changeAll-page__nickname">
+        <div class="change_all-page__nickname">
             <span class="chat-page__username">Динка</span>
         </div>
-        <div class="changeAll-page__content">
-            {{> InputField className="changeAll-page__input" title="Старый пароль" name="oldPassword" value="1234" type="password"}}
-            {{> InputField className="changeAll-page__input" title="Новый пароль" name="newPassword" value="123456" type="password"}}
-            {{> InputField className="changeAll-page__input" title="Повторите новый пароль" name="newPassword" value="123456" type="password"}}
+        <div class="change_all-page__content">
+            {{> InputField className="change_all-page__input" title="Старый пароль" name="oldPassword" value="1234" type="password"}}
+            {{> InputField className="change_all-page__input" title="Новый пароль" name="newPassword" value="123456" type="password"}}
+            {{> InputField className="change_all-page__input" title="Повторите новый пароль" name="newPassword" value="123456" type="password"}}
         </div>
-        <nav class="changeAll-page__footer">
+        <nav class="change_all-page__footer">
             {{> Button text="Сохранить" page="chat" }}
             {{> Link page="chat" text="Отменить"}}
         </nav>
