--- a/src/components/form-auth/form-auth.scss
+++ b/src/components/form-auth/form-auth.scss
@@ -7,12 +7,12 @@
     min-height: 460px;
     width: 340px;
 
-    .container-form__header {
+    .container-form-header {
         text-align: center;
         font-size: 1.5em;
     }
 
-    .container-form__buttons {
+    .container-form-buttons {
         display: flex;
         flex-direction: column;
         align-items: center;
