--- a/src/components/message/message.scss
+++ b/src/components/message/message.scss
@@ -37,7 +37,7 @@
         }
     }
 
-    .message__file {
+    .message-file {
         padding: 11px;
         width: auto;
         height: 95%;
@@ -49,13 +49,13 @@
         }
     }
 
-    .message__text {
+    .message-text {
         padding: 11px;
         background-color:transparent;
 
     }
 
-    .message__time {
+    .message-time {
         display: flex;
         justify-content: flex-end;
     }
