--- a/src/pages/changeData/changeData.hbs
+++ b/src/pages/changeData/changeData.hbs
@@ -1,8 +1,8 @@
 <main>
-    <form class="change_all-page">
+    <form class="change-all-page">
         <div class="change_all-page__avatar-container">
             <label for="avatar-upload" class="change_all-page__avatar-label">
-                <img src="../assets/Птица-секретарь.png" alt="Профиль" class="chat-page__profile-icon"/>
+                <img src="../assets/Птица-секретарь.png" alt="Профиль" class="chat-page-profile-icon"/>
                 <span class="change_all-page__avatar-text">Изменить</span>
             </label>
             <input type="file" id="avatar-upload" name="avatar" class="change_all-page__avatar-input" accept="image/*">
