--- a/src/pages/changePassword/changePassword.hbs
+++ b/src/pages/changePassword/changePassword.hbs
@@ -1,7 +1,7 @@
 <main>
-    <form class="change_all-page">
+    <form class="change-all-page">
         <div class="change_all-page__avatar-container">
-            <img src="../assets/Птица-секретарь.png" alt="Профиль" class="chat-page__profile-icon"/>
+            <img src="../assets/Птица-секретарь.png" alt="Профиль" class="chat-page-profile-icon"/>
         </div>
         <div class="change_all-page__nickname">
             <span class="chat-page__username">Динка</span>
