--- a/src/pages/chat-page/chat-page.hbs
+++ b/src/pages/chat-page/chat-page.hbs
@@ -1,6 +1,6 @@
 <main class="chat-page">
     <nav class="chat-page__sidebar">
-        <img src="../assets/Птица-секретарь.png" alt="Профиль" class="chat-page__profile-icon"/>
+        <img src="../assets/Птица-секретарь.png" alt="Профиль" class="chat-page-profile-icon"/>
         <span class="chat-page__username">Динка</span>
         {{> Link page="start" text="Профиль"}}
         <form>
@@ -14,18 +14,18 @@
     </nav>
     <section class="chat-page__dialog">
         <header class="chat-page__header">
-            <img src="../assets/Мандаринка.png" alt="Профиль" class="chat-page__profile-icon"/>
+            <img src="../assets/Мандаринка.png" alt="Профиль" class="chat-page-profile-icon"/>
             <span class="chat-page__username">Мандаринка</span>
         </header>
         <div class="chat-page__messages">
             <div class="message">
-                <span class="message__text">Факт: одно занятие в день очищает совесть и улучшает сон</span>
+                <span class="message-text">Факт: одно занятие в день очищает совесть и улучшает сон</span>
             </div>
             <div class="message">
-                <span class="message__text">Используйте функцию «Краткий пересказ», чтобы сохранить ёмкую версию пройденного урока. А если захотите написать заметку, это можно сделать прямо в учебнике.</span>
+                <span class="message-text">Используйте функцию «Краткий пересказ», чтобы сохранить ёмкую версию пройденного урока. А если захотите написать заметку, это можно сделать прямо в учебнике.</span>
             </div>
             <div class="message">
-                <span class="message__text">Ты есть в Телеграмм, а я в Красной Книге</span>
+                <span class="message-text">Ты есть в Телеграмм, а я в Красной Книге</span>
             </div>
         </div>
         <form class="chat-page__input">
