--- a/src/pages/error-not-found/error-not-found.hbs
+++ b/src/pages/error-not-found/error-not-found.hbs
@@ -1,5 +1,5 @@
 <main>
-    <form class="errorNotFound-page">
+    <form class="error-not-found-page">
         <div class="errorNotFound-page__content">
             {{> PageTitle title="404" }}
             {{> PageTitle title="Не туда попали" }}
