--- a/src/components/avatar/avatar.scss
+++ b/src/components/avatar/avatar.scss
@@ -20,7 +20,7 @@
         width: 130px;
     }
 
-    .avatar__image {
+    .avatar-image {
         border-radius: 100%;
         width: 100%;
         height: 100%;
@@ -30,7 +30,7 @@
         display: block;
     }
 
-    .avatar__hover {
+    .avatar-hover {
         transition: .5s ease;
         opacity: 0;
         position: absolute;
@@ -44,7 +44,7 @@
         align-items: center;
         justify-content: center;
 
-        .avatar__hover__text {
+        .avatar-hover-text {
             color: white;
             font-size: 16px;
             width: 100px;
@@ -52,11 +52,11 @@
         }
     }
 
-    &:hover .avatar__image {
+    &:hover .avatar-image {
         background-color: var(--blue);
     }
 
-    &:hover .avatar__hover {
+    &:hover .avatar-hover {
         background-color: var(--blue);
         opacity: 0.8;
     }
