--- a/src/components/chat-list/chat-list.scss
+++ b/src/components/chat-list/chat-list.scss
@@ -6,18 +6,18 @@
     padding: 10px;
 
 
-    .chat-list__header {
+    .chat-list-header {
         display: flex;
         justify-content: flex-end;
     }
 
-    .chat-list__search {
+    .chat-list-search {
         padding: 10px 0;
         margin-bottom: 10px;
         border-bottom: 1px solid var(--gray-light);
     }
 
-    .chat-list__chats {
+    .chat-list-chats {
         overflow-y: auto;
         list-style-type: none;
     }
