--- a/src/components/form-profile/form-profile.scss
+++ b/src/components/form-profile/form-profile.scss
@@ -5,10 +5,10 @@
     align-items: center;
     padding: 60px;
 
-    .profile__avatar {
+    .profile-avatar {
         text-align: center;
 
-        .profile__avatar__name{
+        .profile-avatar-name{
             font-size: 16px;
             font-weight: bold;
             color:var(--blue);
@@ -16,11 +16,11 @@
         }
     }
 
-    .profile__main{
+    .profile-main{
         margin: 80px 0;
     }
 
-    .profile__buttons {
+    .profile-buttons {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
