--- a/src/components/message-list/message-list.scss
+++ b/src/components/message-list/message-list.scss
@@ -5,14 +5,14 @@
     width: 100%;
     padding: 10px;
 
-    .message-list__header {
+    .message-list-header {
         display: flex;
         justify-content: space-between;
         align-items: center;
         border-bottom: 1px solid var(--gray-light);
         padding: 10px;
 
-        .message-list__header__avatar {
+        .message-list-header-avatar {
             display: flex;
             align-items: center;
 
@@ -25,7 +25,7 @@
 
     }
 
-    .message-list__main {
+    .message-list-main {
         display: flex;
         flex-direction: column;
         overflow-y: auto;
@@ -34,12 +34,12 @@
         height: 100%;
         list-style-type:  none;
 
-        .message-list__main__message{
+        .message-list-main-message{
             margin:20px 10px;
         }
     }
 
-    .message-list__footer {
+    .message-list-footer {
         width: 100%;
         max-height: 200px;
         padding: 10px;
@@ -49,7 +49,7 @@
         column-gap: 10px;
         align-items: center;
 
-        .message-list__footer__input{
+        .message-list-footer-input{
             padding: 15px 10px;
             border-radius: 15px;
             background-color: var(--gray-0);
