Исправляю ошибки, в процессе, подождите пожалуйста

--- a/src/assets/change-all-page.scss
+++ b/src/assets/change-all-page.scss
@@ -52,7 +52,7 @@
     bottom: 5px;
     left: 50%;
     transform: translateX(-50%);
-    background-color: rgba(0, 0, 0, 70%);
+    background-color: #f1f1f1;
     padding: 5px 10px;
     color: white;
     border-radius: 5px;
