--- a/src/pages/chat-page/chat-page.scss
+++ b/src/pages/chat-page/chat-page.scss
@@ -11,8 +11,7 @@ html, body {
   grid-template: "chat-page__left chat-page__main" 1fr / auto 1fr;
   gap: 0 0;
   grid-auto-flow: row;
-  overflow-y: hidden;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .chat-page-left {
@@ -30,8 +29,8 @@ html, body {
   margin-bottom: 10px;
   border-radius: 4px;
   background-color: #f1f1f1;
+
   &__text {
     word-wrap: break-word;
   }
 }
-
