--- a/src/pages/chat-page/page-chat.scss
+++ b/src/pages/chat-page/page-chat.scss
@@ -1,9 +1,3 @@
-html, body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
-
 .chat-page {
   width: 100vw;
   height: 100vh;
@@ -11,7 +5,8 @@ html, body {
   grid-template: "chat-page__left chat-page__main" 1fr / auto 1fr;
   gap: 0 0;
   grid-auto-flow: row;
-  overflow: hidden;
+  overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 .chat-page-left {
@@ -23,14 +18,3 @@ html, body {
   grid-area: chat-page__main;
 }
 
-.message {
-  width: 40%;
-  padding: 10px;
-  margin-bottom: 10px;
-  border-radius: 4px;
-  background-color: #f1f1f1;
-
-  &__text {
-    word-wrap: break-word;
-  }
-}
