--- a/src/components/avatar/avatar.scss
+++ b/src/components/avatar/avatar.scss
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: url("../../assets/icons/image.svg") no-repeat center;
+    background: url("src/assets/icons/image.svg") no-repeat center;
     position: relative;
     height: 130px;
     width: 130px;
@@ -20,7 +20,7 @@
         width: 130px;
     }
 
-    .avatar-image {
+    .avatar__image {
         border-radius: 100%;
         width: 100%;
         height: 100%;
@@ -30,7 +30,8 @@
         display: block;
     }
 
-    .avatar-hover {
+    .avatar__hover {
+        cursor: pointer;
         transition: .5s ease;
         opacity: 0;
         position: absolute;
@@ -44,7 +45,7 @@
         align-items: center;
         justify-content: center;
 
-        .avatar-hover-text {
+        .avatar__hover__text {
             color: white;
             font-size: 16px;
             width: 100px;
@@ -52,11 +53,11 @@
         }
     }
 
-    &:hover .avatar-image {
+    &:hover .avatar__image {
         background-color: var(--blue);
     }
 
-    &:hover .avatar-hover {
+    &:hover .avatar__hover {
         background-color: var(--blue);
         opacity: 0.8;
     }
