--- a/src/components/chat-item/chat-item.scss
+++ b/src/components/chat-item/chat-item.scss
@@ -7,35 +7,40 @@
     grid-auto-flow: column;
     border-bottom: 1px solid var(--gray-light);
     height: 80px;
-    width: 310px;
+    width: auto;
     margin: 10px 0;
 
 }
 
-.chat-item-avatar {
+.chat-item__avatar {
     grid-area: a;
     display: flex;
     align-items: center;
 }
 
-.chat-item-caption {
+.chat-item__caption {
     grid-area: b;
     display: flex;
     justify-content: space-between;
     width: 100%;
 
-    .chat-item-caption-name {
+    .chat-item__caption__name {
         font-weight: bold;
+        cursor:pointer;
+
+        &:hover{
+            opacity: 0.7;
+        }
     }
 }
 
-.chat-item-message {
+.chat-item__message {
     grid-area: c;
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
 
-    .chat-item-message-content p {
+    .chat-item__message__content p {
         color: var(--gray-light);
         width: 200px;
         margin: 0;
@@ -46,4 +51,3 @@
         text-overflow: ellipsis;
     }
 }
-
