--- a/src/components/error/error.scss
+++ b/src/components/error/error.scss
@@ -4,13 +4,13 @@
     flex-direction: column;
     align-items: center;
 
-    .error-number{
+    .error__number{
         color:var(--blue);
         font-weight:bold;
         font-size:40px;
     }
 
-    .error-text{
+    .error__text{
         color:var(--gray-dark);
         font-weight:bold;
         font-size:18px;
