--- a/src/components/input-search/input-search.scss
+++ b/src/components/input-search/input-search.scss
@@ -6,7 +6,7 @@
     min-width: 290px;
     display: block;
 
-    .input-search-label {
+    .input-search__label {
         content: "Search...";
         color: var(--gray-light);
         position: absolute;
@@ -16,7 +16,7 @@
 
     &::before {
         content: "";
-        background: url("../../assets/icons/search.svg") no-repeat;
+        background: url("src/assets/icons/search.svg") no-repeat;
         position: absolute;
         top: 17px;
         left: 32%;
@@ -24,7 +24,7 @@
         height: 20px;
     }
 
-    .input-search-value {
+    .input-search__value {
         display: flex;
         height: 38px;
         flex-direction: column;
