--- a/src/components/message-list/message-list.scss
+++ b/src/components/message-list/message-list.scss
@@ -5,41 +5,47 @@
     width: 100%;
     padding: 10px;
 
-    .message-list-header {
+    .message-list__header {
+        position: relative;
         display: flex;
         justify-content: space-between;
         align-items: center;
         border-bottom: 1px solid var(--gray-light);
         padding: 10px;
 
-        .message-list-header-avatar {
+        .message-list__header__avatar {
             display: flex;
             align-items: center;
 
-            span {
+            .message-list__header__title {
                 padding-left: 20px;
-                font-size: 16px;
-                font-weight: bold;
+
+                span{
+                    font-size: 16px;
+                    font-weight: bold;
+                }
+
             }
         }
 
     }
 
-    .message-list-main {
+    .message-list__main {
         display: flex;
         flex-direction: column;
-        overflow: auto;
+        overflow-y: auto;
         padding: 20px 0;
         margin-bottom:20px;
         height: 100%;
         list-style-type:  none;
 
-        .message-list-main-message{
+        .message-list__main__message{
             margin:20px 10px;
         }
     }
 
-    .message-list-footer {
+    .message-list__footer {
+        position: relative;
         width: 100%;
         max-height: 200px;
         padding: 10px;
@@ -49,7 +55,7 @@
         column-gap: 10px;
         align-items: center;
 
-        .message-list-footer-input{
+        .message-list__footer__input{
             padding: 15px 10px;
             border-radius: 15px;
             background-color: var(--gray-0);
@@ -60,3 +66,17 @@
 
 }
 
+.message-list__empty{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+
+    p{
+        font-weight: 600;
+        font-size: 16px;
+        opacity:0.7;
+    }
+
+}
