--- a/src/components/message/message.scss
+++ b/src/components/message/message.scss
@@ -7,6 +7,14 @@
     float:left;
     max-width: 50%;
     min-width: 200px;
+    position: relative;
+
+    .message__user{
+        color: var(--red);
+        font-size: 13px;
+        font-weight: bold;
+        top:0;
+    }
 
     &.message-my {
         border-radius:15px 15px 0;
@@ -27,7 +35,7 @@
 
             &::before {
                 content: "";
-                background-image: url("../../assets/icons/double-check.svg");
+                background-image: url("src/assets/icons/double-check.svg");
                 width: 16px;
                 height: 16px;
                 position: absolute;
@@ -37,7 +45,7 @@
         }
     }
 
-    .message-file {
+    .message__file {
         padding: 11px;
         width: auto;
         height: 95%;
@@ -49,15 +57,14 @@
         }
     }
 
-    .message-text {
+    .message__text {
         padding: 11px;
         background-color:transparent;
 
     }
 
-    .message-time {
+    .message__time {
         display: flex;
         justify-content: flex-end;
     }
 }
-
