--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -62,7 +62,7 @@
 
 .button-close {
     padding: 0;
-    background-image: url("src/assets/icons/close.svg");
+    background-image: url("src/assets/icons/cancel.svg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: 60%;
