--- a/src/components/loader/loader.scss
+++ b/src/components/loader/loader.scss
@@ -1,34 +1,20 @@
-.loader {
-    width: 48px;
-    height: 48px;
-    display: inline-block;
-    position: relative;
-}
-
-.loader::after,
-.loader::before {
-    content: '';
-    width: 48px;
-    height: 48px;
-    border: 2px solid #242424;
-    position: absolute;
-    left: 0;
-    top: 0;
-    box-sizing: border-box;
-    animation: rotation 2s ease-in-out infinite;
-}
-
-.loader::after {
-    border-color: #3a7bc5;
-    animation-delay: 1s;
-}
-
 @keyframes rotation {
-    0% {
-        transform: rotate(0deg);
-    }
-
-    100% {
-        transform: rotate(360deg);
-    }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
+
+.loader {
+  display: inline-block;
+  animation: rotation 2s linear infinite;
+
+  svg {
+    width: 24px;
+    height: 24px;
+    fill: #5f6368;
+  }
+}
+
