--- a/src/components/button/button.pcss
+++ b/src/components/button/button.pcss
@@ -20,7 +20,7 @@
 
 .button-arrow {
     padding: 0;
-    background-image: url("src/assets/icons/send.svg");
+    background-image: url("../../assets/icons/send.svg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: 60%;
@@ -30,7 +30,7 @@
 
 .button-dots {
     padding: 0;
-    background-image: url("src/assets/icons/dots.svg");
+    background-image: url("../../assets/icons/dots.svg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: 60%;
@@ -41,7 +41,7 @@
 
 .button-paperclip {
     padding: 0;
-    background-image: url("src/assets/icons/paperclip.svg");
+    background-image: url("../../assets/icons/paperclip.svg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: 60%;
@@ -52,7 +52,7 @@
 
 .button-cancel {
     padding: 0;
-    background-image: url("src/assets/icons/arrow-left.svg");
+    background-image: url("../../assets/icons/arrow-left.svg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: 60%;
@@ -62,7 +62,7 @@
 
 .button-close {
     padding: 0;
-    background-image: url("src/assets/icons/cancel.svg");
+    background-image: url("../../assets/icons/close.svg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: 60%;
