--- a/src/components/input-search/input-search.pcss
+++ b/src/components/input-search/input-search.pcss
@@ -16,7 +16,7 @@
 
     &::before {
         content: "";
-        background: url("src/assets/icons/search.svg") no-repeat;
+        background: url("../../assets/icons/search.svg") no-repeat;
         position: absolute;
         top: 17px;
         left: 32%;
