--- a/src/components/message/message.pcss
+++ b/src/components/message/message.pcss
@@ -10,7 +10,7 @@
     position: relative;
 
     .message__user{
-        color: var(--red);
+        color: var(--blue);
         font-size: 13px;
         font-weight: bold;
         top:0;
@@ -35,7 +35,7 @@
 
             &::before {
                 content: "";
-                background-image: url("src/assets/icons/double-check.svg");
+                background-image: url("../../assets/icons/double-check.svg");
                 width: 16px;
                 height: 16px;
                 position: absolute;
