--- a/src/components/modal-load-file/modal-load-file.pcss
+++ b/src/components/modal-load-file/modal-load-file.pcss
@@ -1,6 +1,6 @@
 .modal-load-file__image{
     border-radius: 10px;
-    border: 1px var(--red) solid;
+    border: 1px var(--blue) solid;
     transition: .5s ease;
     backface-visibility: hidden;
     opacity: 1;
