--- a/src/components/modal-prompt/modal-prompt.pcss
+++ b/src/components/modal-prompt/modal-prompt.pcss
@@ -9,12 +9,12 @@
     padding: 20px 15px;
 
     &.highlight{
-        border-color:  var(--red-light);
+        border-color:  var(--blue-light);
     }
 
     .modal-avatar__image{
         border-radius: 100px;
-        border: 1px var(--red) solid;
+        border: 1px var(--blue) solid;
         transition: .5s ease;
         backface-visibility: hidden;
         opacity: 1;
@@ -25,12 +25,12 @@
     }
 
     .modal-avatar__empty{
-        background: url("src/assets/icons/image.svg") no-repeat center;
+        background: url("../../assets/icons/image.svg") no-repeat center;
         position: relative;
         height: 130px;
         width: 130px;
         border-radius: 100px;
-        border: 1px var(--red) solid;
+        border: 1px var(--blue) solid;
     }
 
     .modal-avatar__label {
