--- a/src/components/avatar/avatar.pcss
+++ b/src/components/avatar/avatar.pcss
@@ -1,11 +1,10 @@
 .avatar {
     border-radius: 100px;
     border: 1px var(--blue) solid;
-    cursor: pointer;
     display: flex;
     justify-content: center;
     align-items: center;
-    background: url("src/assets/icons/image.svg") no-repeat center;
+    background: url("../../assets/icons/image.svg") no-repeat center;
     position: relative;
     height: 130px;
     width: 130px;
