--- a/src/components/link/link.pcss
+++ b/src/components/link/link.pcss
@@ -17,7 +17,7 @@
     }
 
     .link-icon{
-        background: url("src/assets/icons/arrow-right.svg") no-repeat;
+        background: url("../../assets/icons/arrow-right.svg") no-repeat;
         width: 12px;
         height: 12px;
         margin-left: 5px;
