--- a/src/components/menu-item/menu-item.pcss
+++ b/src/components/menu-item/menu-item.pcss
@@ -24,27 +24,27 @@
         padding: 1px;
 
         &.menu-item__icon_media {
-            background-image: url("src/assets/icons/image.svg") ;
+            background-image: url("../../assets/icons/image.svg") ;
         }
 
         &.menu-item__icon_file {
-            background-image: url("src/assets/icons/file.svg");
+            background-image: url("../../assets/icons/file.svg");
         }
 
         &.menu-item__icon_location {
-            background-image: url("src/assets/icons/location.svg");
+            background-image: url("../../assets/icons/location.svg");
         }
 
         &.menu-item__icon_plus{
-            background-image: url("src/assets/icons/circle-plus.svg");
+            background-image: url("../../assets/icons/circle-plus.svg");
         }
 
         &.menu-item__icon_delete{
-            background-image: url("src/assets/icons/circle-cancel.svg") ;
+            background-image: url("../../assets/icons/circle-x.svg") ;
         }
 
         &.menu-item__icon_avatar{
-            background-image: url("src/assets/icons/chat-avatar.svg") ;
+            background-image: url("../../assets/icons/chat-avatar.svg") ;
         }
     }
 
