--- a/src/components/modal-avatar/modal-avatar.pcss
+++ b/src/components/modal-avatar/modal-avatar.pcss
@@ -9,7 +9,7 @@
     padding: 20px 15px;
 
     &.highlight{
-        border-color:  var(--red-light);
+        border-color:  var(--blue-light);
     }
 
     .modal-avatar__image{
@@ -25,7 +25,7 @@
     }
 
     .modal-avatar__empty{
-        background: url("src/assets/icons/image.svg") no-repeat center;
+        background: url("../../assets/icons/image.svg") no-repeat center;
         position: relative;
         height: 130px;
         width: 130px;
