--- a/src/components/user-item/user-item.pcss
+++ b/src/components/user-item/user-item.pcss
@@ -23,11 +23,11 @@
         }
 
         &.user-item__icon_plus{
-            background-image: url("src/assets/icons/circle-plus.svg");
+            background-image: url("../../assets/icons/circle-plus.svg");
         }
 
         &.user-item__icon_delete{
-            background-image: url("src/assets/icons/circle-cancel.svg") ;
+            background-image: url("../../assets/icons/circle-x.svg") ;
         }
     }
 
